--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
 								<p>A collection of python projects</p>
 							</div>
 						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/scrapper.png" alt="" /></div><div class="content">
+								<h2><a href="https://github.com/prasannaaav/Web_Scraping_With_Python">WEB SCRAPING</a><br />
+								</h2>
+								<p>A whole bunch of Web scraping using python</p>
+							</div>
+						</section>
 					</section>
+					
 
 				<!-- Footer -->
 					<footer id="footer">
